# music-react-video-splitter

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  git-workflow.md  pyproject.toml  splitter.py  zappa_settings.example.json  zappa_settings.json
infra/: DEPLOY.md  sanji-compute.sam.yaml  sanji-resources.sam.yaml
infra/worker/: Dockerfile  build_and_push.sh
sanji/: __init__.py  __main__.py  audio.py  aws.py  cli.py  functions.py  pipeline.py  settings.py  transcription.py  utils.py  video.py  worker.py
sanji/service/: __init__.py  app.py  auth.py  billing.py  cors.py  jobs.py  lambda_app.py  logging_config.py  plans.py  results.py  stripe_config.py  uploads.py  usage.py  users.py
tests/: conftest.py  test_audio.py  test_auth.py  test_billing.py  test_cli.py  test_cors.py  test_functions.py  test_jobs_validation.py  test_pipeline.py  test_results.py  test_secret_key_config.py  test_service.py  test_stripe_config.py  test_transcription.py  test_uploads.py  test_usage_endpoint.py  test_utils.py  test_video.py  test_worker.py
validation/: README.md  smoke_test.py
