[project]
name = "sanji"
version = "0.1.0"
description = "CLI tool to split music reaction videos into individual segments using audio analysis"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
# ML pipeline deps (CLI / worker tier). The api tier must stay free of these.
ml = [
    "yt-dlp",
    "faster-whisper>=1.2.1",
    "numpy",
]
# Service tier (Lambda via Zappa) — must not pull TensorFlow.
api = [
    "flask>=3",
    "pydantic>=2",
    "structlog>=24",
    "boto3>=1.34",
    "zappa>=0.59",
    "sandjig",
    "google-auth>=2",
    "google-auth-oauthlib>=1",
    "stripe>=15.3.0",
]
# AWS Batch worker (#8): runs the pipeline (ml) and lands results in S3. Reuses
# the sandjig job contracts (SanjiJobResult), so it carries sandjig + boto3.
worker = [
    "yt-dlp",
    "faster-whisper>=1.2.1",
    "numpy",
    "boto3>=1.34",
    "structlog>=24",
    "pydantic>=2",
    "sandjig",
]

[project.scripts]
sanji = "sanji.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sanji"]

[dependency-groups]
dev = [
    "pytest>=8",
    "hypothesis>=6",
    "moto[dynamodb]>=5.0",
    "boto3-stubs[dynamodb]>=1.34",
    "ruff>=0.11",
    "pyright>=1.1.400",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["."]

[tool.uv.sources]
sandjig = { git = "https://github.com/monkut/sandjig.git", branch = "main" }
